added view